# projectile-simulation

./: .gitignore  CMakeLists.txt  README.md  ball.c  ball.h  main.c  render.c  render.h  utils.c  utils.h  window.h  world.h
